--- a/contact/index.html
+++ b/contact/index.html
@@ -66,7 +66,34 @@
   </head>
 	<body>
 
-
+<header class="nav">
+      <div class="container">
+        <div class="row items-center mb-lg">
+          <div class="column align-left">
+            <a
+              href="#"
+              aria-current="page"
+              class="w-inline-block w--current"
+            >
+              <div class="logo">Infrared Studios</div>
+            </a>
+          </div>
+          <div class="column align-right">
+            <div class="row items-center">
+              <a href="https://infrared.ga/contact" class="button main w-button"
+                >Contact<span
+                  data-feather="arrow-right"
+                  class="icon mr-md-n ml-md"
+                  >•</span
+                ></a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+		
+		
 <script src="https://cdn01.jotfor.ms/static/prototype.forms.js?3.3.38697" type="text/javascript"></script>
 <script src="https://cdn02.jotfor.ms/static/jotform.forms.js?3.3.38697" type="text/javascript"></script>
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/punycode/1.4.1/punycode.js"></script>
