--- a/contact/index.html
+++ b/contact/index.html
@@ -129,6 +129,56 @@ JotForm.paymentExtrasOnTheFly([null,{"name":"heading","qid":"1","text":"Contact 
       <li style="display:none">Should be Empty: <input type="text" name="website" value="" /></li>
     </ul>
   </div>
+	   <div class="section pb-2xl-m">
+      <div class="container mt-2xl mb-2xl">
+        <div class="row v-l">
+          <div class="column align-left">
+            <div class="emoji lg">🌎</div>
+            <a href="#" class="u mt-lg">contact@infrared.ga</a>
+            <div class="row mt-lg ml-md-n">
+              <a href="https://twitter.com/ProductInfrared" target="_blank" class="p-md w-inline-block"
+                ><img
+                  src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg"
+                  data-feather="twitter"
+                  alt=""
+                  class="icon" /></a>
+            </div>
+          </div>
+          <div class="column align-left">
+            <h6 class="max-w-lg mb-xl footer-header">Company</h6>
+            <div><a href="https://infrared.ga/about">About</a></div>
+            <div class="mt-md"><a href="https://jobs.infrared.ga">Jobs</div>
+            <div class="mt-md"><a href="https://blog.infrared.ga">Blog</a></div>
+          </div>
+          <div class="column align-left">
+            <h6 class="max-w-lg mb-xl footer-header">Contact</h6>
+            <div><a href="https://support.infrared.ga">Support</a></div>
+            <div class="mt-md"><a href="https://support.infrared.ga">Sales</a></div>
+          </div>
+          <div class="column align-left">
+            <h6 class="max-w-lg mb-xl footer-header">Resources</h6>
+            <div><a href="https://podcast.infrared.ga">Podcast</a></div>
+            <div class="mt-md"><a href="https://infrared.ga">Help Center</a></div>
+          </div>
+        </div>
+        <div class="border-t mt-xl">
+          <div class="row mt-xl v-l">
+            <div class="column align-left">
+              <div class="muted text-sm">
+                © Infrared Productions
+              </div>
+            </div>
+            <div class="column align-right">
+              <div class="row">
+                <div class="muted text-sm mr-lg">Dummy links:</div>
+                <div><a href="#">Privacy Policy</a></div>
+                <div><a href="#" class="ml-lg">Terms and Conditions</a></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   <script>
     JotForm.showJotFormPowered = "new_footer";
   </script>
