--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <div class="column align-center">
             <h1 class="max-w-lg text-giga text-center text-white">Transform your idea into reality with Infrared Studios.
 </h1>
-            <a href="https://infrared.ga/projects" class="button xl main white mt-lg w-button"
+            <a href="https://infrared.ga/contact" class="button xl main white mt-lg w-button"
               > Get in Touch</a
             >
           </div>
