--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="container mt-3xl mb-3xl">
         <div class="row">
           <div class="column align-center">
-            <h1 class="test-giga text-center">Experience the thrill of game development.
+            <h1 class="test-giga text-center">N***A
 </h1>
             <p class="text-lg text-center max-w-lg"> Infrared Studios is the place to go for game development and design, plus software development and open source solutions.</p>
             <a href="https://infrared.ga/contact" class="button xl main mt-lg w-button"> Get in touch now.</a>
